--- a/Jitterpipe.ipynb
+++ b/Jitterpipe.ipynb
@@ -86,7 +86,6 @@
     "    TIMFLAG = timing\n",
     "    RESIDFLAG = resids\n",
     "\n",
-    "#QUESTION FOR MICHAEL - what role does DMPRINTERFLAG play?    \n",
     "    #DMPRINTERFLAG = F \n",
     "    \n",
     "\n",
@@ -301,7 +300,8 @@
     "        \n",
     "        printer(\"Plots generated\")\n",
     "\n",
-    "    # I don't know the purpose of this section, so I have it turned off above, no option in funcion def to turn on.\n",
+    "    # I don't think we'll need this section, so I have it turned off above, no option in funcion def to turn on.\n",
+    "    # It changes the MJDs on the zap files, and it's an interesting forloop method of string replacement!\n",
     "#     if DMPRINTERFLAG:\n",
     "#         files = sorted(glob.glob(\"zap/*all.zap\"))\n",
     "#         for i,f in enumerate(files[2:]):\n",
