--- a/Jitterpipe.ipynb
+++ b/Jitterpipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -233,22 +233,22 @@
     "    if RESIDFLAG:\n",
     "        printer(\"Running tempo\")\n",
     "\n",
-    "#         call(\"mkdir %sproducts\" %DIR)\n",
+    "        call(\"mkdir %sproducts\" %DIR)\n",
     "        \n",
-    "#         #This turns off all the calibrators in the NANOGrav parfiles\n",
-    "#         par=open(DIR + \"%s_NANOGrav_11yv0.gls.par\" %psrname, 'r')\n",
-    "#         pardata=par.read()\n",
-    "#         par.close()\n",
+    "        #This turns off all the calibrators in the NANOGrav parfiles\n",
+    "        par=open(DIR + \"%s_NANOGrav_11yv0.gls.par\" %psrname, 'r')\n",
+    "        pardata=par.read()\n",
+    "        par.close()\n",
     "        \n",
-    "#         par=open(PARFILE, 'w')\n",
-    "#         par.write(pardata.replace(\"  1  \", \"  0  \"))\n",
-    "#         par.close\n",
+    "        par=open(PARFILE, 'w')\n",
+    "        par.write(pardata.replace(\"  1  \", \"  0  \"))\n",
+    "        par.close\n",
     "        \n",
-    "#         #This runs tempo on 80s + 8 channel files, using the master tim files\n",
-    "# #         mystring = \"tempo -G -f %s %smaster_%s_NANOGrav_11y_80F8.tim \" %(PARFILE, DIR, psrname)\n",
-    "# #         print mystring\n",
-    "#         call(\"tempo -G -f %s %smaster_%s_NANOGrav_11y_80F8.tim \" %(PARFILE, DIR, psrname) )\n",
-    "#         call(\"mv resid2.tmp %sproducts/resid_80F8.tmp\" %DIR)\n",
+    "        #This runs tempo on 80s + 8 channel files, using the master tim files\n",
+    "#         mystring = \"tempo -G -f %s %smaster_%s_NANOGrav_11y_80F8.tim \" %(PARFILE, DIR, psrname)\n",
+    "#         print mystring\n",
+    "        call(\"tempo -G -f %s %smaster_%s_NANOGrav_11y_80F8.tim \" %(PARFILE, DIR, psrname) )\n",
+    "        call(\"mv resid2.tmp %sproducts/resid_80F8.tmp\" %DIR)\n",
     "        \n",
     "        #This runs tempo on 10s + 8 channel files, recursively using the daily tim files\n",
     "        \n",
@@ -273,56 +273,56 @@
     "    \n",
     "        ## ==========================\n",
     "    \n",
-    "#         printer(\"Generating Plots for specified MJD\")\n",
+    "        printer(\"Generating Plots for specified MJD\")\n",
     "        \n",
-    "#         #First Plotting 80s + 8 channel plot\n",
+    "        #First Plotting 80s + 8 channel plot\n",
     "        \n",
-    "#         #Defining the residuals\n",
-    "#         x=r.read_residuals(filename= DIR + \"products/resid_80F8.tmp\")\n",
+    "        #Defining the residuals\n",
+    "        x=r.read_residuals(filename= DIR + \"products/resid_80F8.tmp\")\n",
     "        \n",
-    "#         #Defining the colormap\n",
-    "#         from matplotlib.colors import LinearSegmentedColormap\n",
-    "#         interval=np.hstack([np.linspace(0.05, 0.25), np.linspace(0.35,0.9)])\n",
-    "#         colors=plt.cm.gist_rainbow(interval)\n",
-    "#         cmap=LinearSegmentedColormap.from_list('name', colors, 8)\n",
+    "        #Defining the colormap\n",
+    "        from matplotlib.colors import LinearSegmentedColormap\n",
+    "        interval=np.hstack([np.linspace(0.05, 0.25), np.linspace(0.35,0.9)])\n",
+    "        colors=plt.cm.gist_rainbow(interval)\n",
+    "        cmap=LinearSegmentedColormap.from_list('name', colors, 8)\n",
     "\n",
-    "#         #Defining Tick numbers for the colorbar\n",
-    "#         from matplotlib import ticker\n",
-    "#         tick_locator = ticker.MaxNLocator(nbins=9)\n",
+    "        #Defining Tick numbers for the colorbar\n",
+    "        from matplotlib import ticker\n",
+    "        tick_locator = ticker.MaxNLocator(nbins=9)\n",
     "        \n",
-    "#         #Creating the plot\n",
-    "#         fig,ax = plt.subplots(figsize=(17,8))\n",
-    "#         cax = ax.scatter(x.bary_TOA, x.prefit_sec, c=x.bary_freq, s=20, edgecolor='#262626', linewidth='0.35', cmap=cmap)\n",
-    "#         ax.set_title('MJD %s, All Frequency Bands, 80s subintervals, 8subchannels' %MJDint, fontsize='16')\n",
-    "#         ax.set_xlim(MJDint, (MJDint + 1))\n",
-    "#         ax.set_ylim(-0.00001, 0.00001)\n",
-    "#         cb=fig.colorbar(cax)\n",
-    "#         cb.locator = tick_locator\n",
-    "#         cb.update_ticks()\n",
+    "        #Creating the plot\n",
+    "        fig,ax = plt.subplots(figsize=(17,8))\n",
+    "        cax = ax.scatter(x.bary_TOA, x.prefit_sec, c=x.bary_freq, s=20, edgecolor='#262626', linewidth='0.35', cmap=cmap)\n",
+    "        ax.set_title('MJD %s, All Frequency Bands, 80s subintervals, 8subchannels' %MJDint, fontsize='16')\n",
+    "        ax.set_xlim(MJDint, (MJDint + 1))\n",
+    "        ax.set_ylim(-0.00001, 0.00001)\n",
+    "        cb=fig.colorbar(cax)\n",
+    "        cb.locator = tick_locator\n",
+    "        cb.update_ticks()\n",
     "\n",
-    "#         plt.savefig(DIR + 'products/%s_80s_8chan.png' %psrname)\n",
-    "#         plt.show()\n",
+    "        plt.savefig(DIR + 'products/%s_80s_8chan.png' %psrname)\n",
+    "        plt.show()\n",
     "        \n",
-    "#         #Next Plotting 10s + 8 channel plot\n",
+    "        #Next Plotting 10s + 8 channel plot\n",
     "        \n",
-    "#         #Defining the residuals\n",
-    "#         y=r.read_residuals(filename= DIR + \"products/resid_%s_NTF8.tmp\" %MJDint)\n",
+    "        #Defining the residuals\n",
+    "        y=r.read_residuals(filename= DIR + \"products/resid_%s_NTF8.tmp\" %MJDint)\n",
     "        \n",
-    "#         #Creating the plot\n",
-    "#         fig,ax = plt.subplots(figsize=(17,8))\n",
-    "#         cax = ax.scatter(y.bary_TOA, y.prefit_sec, c=y.bary_freq, s=20, edgecolor='#262626', linewidth='0.35', cmap=cmap)\n",
-    "#         MJDtitle = str(MJDint)\n",
-    "#         ax.set_title('MJD %s, All Frequency Bands, 10s subintervals, 8subchannels' %MJDtitle, fontsize='16')\n",
-    "#         ax.set_xlim(MJDint, (MJDint + 1))\n",
-    "#         ax.set_ylim(-0.00001, 0.00001)\n",
-    "#         cb=fig.colorbar(cax)\n",
-    "#         cb.locator = tick_locator\n",
-    "#         cb.update_ticks()\n",
+    "        #Creating the plot\n",
+    "        fig,ax = plt.subplots(figsize=(17,8))\n",
+    "        cax = ax.scatter(y.bary_TOA, y.prefit_sec, c=y.bary_freq, s=20, edgecolor='#262626', linewidth='0.35', cmap=cmap)\n",
+    "        MJDtitle = str(MJDint)\n",
+    "        ax.set_title('MJD %s, All Frequency Bands, 10s subintervals, 8subchannels' %MJDtitle, fontsize='16')\n",
+    "        ax.set_xlim(MJDint, (MJDint + 1))\n",
+    "        ax.set_ylim(-0.00001, 0.00001)\n",
+    "        cb=fig.colorbar(cax)\n",
+    "        cb.locator = tick_locator\n",
+    "        cb.update_ticks()\n",
     "\n",
-    "#         plt.savefig(DIR + 'products/%s_10s_8chan.png' %psrname)\n",
-    "#         plt.show()\n",
+    "        plt.savefig(DIR + 'products/%s_10s_8chan.png' %psrname)\n",
+    "        plt.show()\n",
     "        \n",
-    "#         printer(\"Plots generated\")\n",
+    "        printer(\"Plots generated\")\n",
     "\n",
     "    # I don't think we'll need this section, so I have it turned off above, no option in funcion def to turn on.\n",
     "    # It changes the MJDs on the zap files, and it's an interesting forloop method of string replacement!\n",
@@ -706,7 +706,8 @@
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -733,7 +734,7 @@
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -756,7 +757,7 @@
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -797,8 +798,7 @@
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1002,6 +1002,28 @@
    ],
    "source": [
     "jitterpipe('/nimrod1/eschwab/J1713_data/', 'J1713+0747', 56380, clearoutput=False, cal=False, zap=False, scrunch=False, timing=False, resids=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jitterpipe: Running B1937+21 jitterpipe reduction pipeline\n",
+      "jitterpipe: Deleting old version\n",
+      "jitterpipe: Deletion complete"
+     ]
+    }
+   ],
+   "source": [
+    "#Trying B1937 again\n",
+    "jitterpipe('/nimrod1/eschwab/B1937_data/', 'B1937+21', 57376, clearoutput=True, cal=True, zap=True, scrunch=True, timing=True, resids=True)"
    ]
   },
   {
