--- a/Jitterpipe.ipynb
+++ b/Jitterpipe.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "def jitterpipe(dirpath, psrname, MJDint, clearoutput=True, cal=True, zap=True, scrunch=True, timing=True, resids=True):\n",
+    "def jitterpipe(dirpath, psrname, fluxcalpath, MJDint, clearoutput=True, cal=True, zap=True, scrunch=True, timing=True, resids=True):\n",
     "    \n",
     "    '''\n",
     "    Jitterpipe\n",
@@ -121,7 +121,15 @@
     "        call(\"pam -m -T %scal/*cf\" %DIR) #Time scrunches the cf files\n",
     "\n",
     "        printer(\"Generating calibrator database\")\n",
-    "        call(\"pac -w -k %scal/caldatabase.txt -p %scal/\" %(DIR, DIR)) #pac performs both polarimetric and flux calibration of pulsar observations\n",
+    "        call(\"pac -w -k %scal/caldatabase.txt -p %scal/\" %(DIR, DIR)) #pac performs calibrations\n",
+    "        \n",
+    "#QUESTION FOR SCOTT        \n",
+    "        #This comes from IPTA 2010, Day 2: Intro to PSRCHIVE\n",
+    "        #Make sure to have the fluxcal files in the cal folder\n",
+    "        printer(\"Generating flux calibrations\")\n",
+    "        call(\"cp %sfolded/*fcal %scal/.\" %(DIR, DIR))\n",
+    "        call(\"fluxcal -f -d %scal/caldatabase.txt\" %DIR)\n",
+    "        \n",
     "        printer(\"Calibrating fits files\")\n",
     "        call(\"pac -Tax -d %scal/caldatabase.txt %sfolded/*rf\" %(DIR, DIR)) #pac creates cal files along with database file\n",
     "        printer(\"Calibration complete\")\n",
@@ -130,8 +138,6 @@
     "        call(\"mkdir %scalib\" %DIR)\n",
     "        call(\"mv %sfolded/*calib* %scalib/\" %(DIR, DIR)) # in bash.cp *word* means anything before and anything after\n",
     "        \n",
-    "#QUESTION FOR SCOTT\n",
-    "        #Do we need to be fixing for negative bandwidth?\n",
     "        #printer(\"Fixing negative bandwidth\")\n",
     "        #call(\"pam -m --reverse_freqs calib/*calib\")\n",
     "\n",
@@ -336,16 +342,6 @@
     "        plt.show()\n",
     "        \n",
     "        printer(\"Plots generated\")\n",
-    "\n",
-    "    # I don't think we'll need this section, so I have it turned off above, no option in funcion def to turn on.\n",
-    "    # It changes the MJDs on the zap files, and it's an interesting forloop method of string replacement!\n",
-    "#     if DMPRINTERFLAG:\n",
-    "#         files = sorted(glob.glob(\"zap/*all.zap\"))\n",
-    "#         for i,f in enumerate(files[2:]):\n",
-    "#             MJD = float(f.split('_')[1])\n",
-    "#             print \"DMX_%04d  0.0 1\" % (i+1)\n",
-    "#             print \"DMXR1_%04d  %0.1f\" % (i+1,MJD-1)\n",
-    "#             print \"DMXR2_%04d  %0.1f\" % (i+1,MJD+2) #covers two special cases\n",
     "\n",
     "\n",
     "    printer(\"Jitterpipe complete\")"
@@ -1559,6 +1555,57 @@
    ],
    "source": [
     "jitterpipe('/nimrod1/eschwab/J1022_data/','J1022+1001', 57375, clearoutput=False, cal=False, zap=False, scrunch=False, timing=False, resids=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jitterpipe: Running J1713+0747 jitterpipe reduction pipeline\n",
+      "jitterpipe: Deleting old version\n",
+      "jitterpipe: Deletion complete\n",
+      "jitterpipe: Generating pulsar calibrators\n",
+      "jitterpipe: Generating calibrator database\n",
+      "jitterpipe: Calibrating fits files\n",
+      "jitterpipe: Calibration complete\n",
+      "jitterpipe: Moving calibrated files\n",
+      "jitterpipe: Removing RFI (this may take awhile)\n",
+      "jitterpipe: Zapping complete\n",
+      "jitterpipe: Making 10s-->80s, 256-->8 channel files\n",
+      "jitterpipe: Making 256-->8 channel, no tscrunch files\n",
+      "jitterpipe: Splitting complete\n",
+      "jitterpipe: Producing timing solution\n",
+      "[55989, 55994, 56023, 56038, 56044, 56057, 56106, 56140, 56165, 56201, 56235, 56241, 56277, 56299, 56319, 56341, 56360, 56380, 56399, 56417, 56438, 56447, 56458, 56479, 56519, 56537, 56557, 56577, 56598, 56619, 56640, 56662, 56738, 56853, 56934, 56955, 56977, 56998, 57018, 57024, 57028, 57032, 57033, 57041, 57049, 57053, 57068, 57069, 57076, 57083, 57090, 57096, 57097, 57108, 57112, 57116, 57118, 57126, 57133, 57137, 57139, 57147, 57186, 57189, 57200, 57205, 57222, 57223, 57233, 57235, 57239, 57240, 57243, 57249, 57257, 57258, 57263, 57265, 57291, 57295, 57302, 57305, 57311, 57319, 57326, 57330, 57333, 57347, 57348, 57355, 57362, 57375, 57376, 57387]\n",
+      "jitterpipe: Writing daily tim file for 10s subint + 8 channel files\n",
+      "jitterpipe: Timing solution complete\n",
+      "jitterpipe: Running tempo\n",
+      "jitterpipe: Residuals generated\n",
+      "jitterpipe: Generating Plots for specified MJD\n"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: '/nimrod1/eschwab/J1713_data/products/resid_56380_80F8.tmp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-209-00614c95123b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mjitterpipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/nimrod1/eschwab/J1713_data/'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'J1713+0747'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m56380\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-203-3a2fa0f31f19>\u001b[0m in \u001b[0;36mjitterpipe\u001b[1;34m(dirpath, psrname, MJDint, clearoutput, cal, zap, scrunch, timing, resids)\u001b[0m\n\u001b[0;32m    282\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    283\u001b[0m         \u001b[1;31m#Defining the residuals\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 284\u001b[1;33m         \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_residuals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mDIR\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"products/resid_%s_80F8.tmp\"\u001b[0m \u001b[1;33m%\u001b[0m\u001b[0mMJDint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    285\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    286\u001b[0m         \u001b[1;31m#Defining the colormap\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/src/presto/lib/python/residuals.pyc\u001b[0m in \u001b[0;36mread_residuals\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m     37\u001b[0m     \"\"\"\n\u001b[0;32m     38\u001b[0m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresiduals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m     \u001b[0minfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m     \u001b[0mswapchar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'<'\u001b[0m \u001b[1;31m# this is little-endian (default)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: '/nimrod1/eschwab/J1713_data/products/resid_56380_80F8.tmp'"
+     ]
+    }
+   ],
+   "source": [
+    "jitterpipe('/nimrod1/eschwab/J1713_data/','J1713+0747', 56380)"
    ]
   },
   {
